feat: complete definitive JVMTI 3.0 release candidate